[optin/reporting/client] fix: table body overflow

--- a/optin/reporting/client/src/styles/globals.scss
+++ b/optin/reporting/client/src/styles/globals.scss
@@ -1,3 +1,51 @@
+html, body, #root, .App {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.p-tabview, 
+.p-tabview-panel, 
+.p-datatable, 
+.p-datatable-wrapper, 
+.p-datatable-table {
+  height: 100%;
+  flex: 1;
+}
+
+.p-tabview-panels {
+  padding: 0 !important;
+  height: calc(100% - 58px);
+}
+
+p-tabview, 
+.p-datatable {
+  display: flex;
+  flex-direction: column;
+}
+
+.p-datatable-wrapper {
+  overflow: auto;
+}
+
+.p-datatable-thead {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+
+  & > tr > th {
+    box-shadow: inset 0 1px 0 #dee2e6, inset 0 -1px 0 #dee2e6;
+  }
+}
+
+.p-rowgroup-header {
+  display: none;
+}
+
+.p-datatable-loading-overlay {
+  z-index: 10 !important;
+}
+
 .pagination {
   display: flex;
   justify-content: center;
@@ -20,7 +68,7 @@
   }
 }
 
- .sub-total-value {
+.sub-total-value {
   @extend .list-item;
   font-weight: bold;
   text-decoration: underline;
